Fix for offcenter loader

--- a/main.css
+++ b/main.css
@@ -73,6 +73,7 @@ body {
 	margin: 2em auto;
 	padding:2em;
 	border-radius: .25em;
+	width:100%;
 	max-width:700px;
 	box-shadow: 0px 0px 5em 0px rgba(0,0,0,0.1);
 }
